<resources>
    <string name="app_name">TV Series Info</string>
    <string name="DBLoadProblem">Problem to load tvshow from database</string>
    <string name="EpisodeNumber">Episode:</string>
    <string name="EpisodeTittle">Tittle:</string>
    <string name="FavoriteEmpty">Ooooo empty favorites :(</string>
    <string name="FavoriteSuccess">Successfully load TVShows :)</string>
    <string name="remove_favorite">Tv Series remove from favorite</string>
    <string name="add_favorite">"Tv Series add to favorite "</string>
    <string name="nothin_new">Today nothing new :(</string>
    <string name="something_new">Successfully load today Shows :)</string>
    <string name="summary">Summary:</string>
    <string name="tvShow_poster">TVShow poster</string>
    <string name="today">Today</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="status">Status</string>
    <string name="lastepisode">Last episode:</string>
    <string name="credits">Credits:</string>
    <string name="some_icons_made_by_from_flaticon_https_www_flaticon_com_licensed_by_http_creativecommons_org_licenses_by_3_0_creative_commons_by_3_0">Some icons from Flaticon https://www.flaticon.com licensed by http://creativecommons.org/licenses/by/3.0/ Creative Commons BY 3.0</string>
    <string name="tvshow_info_get_from">TVShow info get from https://www.tvmaze.com/api on licenses https://creativecommons.org/licenses/by-sa/4.0/</string>
    <string name="notification_content">Check what new in TV world.</string>
    <string name="notification_newShow">New TV Show Info Alert!</string>
    <string name="contenttittlenotification">TV Show Info</string>
    <string name="net_problem">Probably you don\'t connect to the Net :(  :(</string>
    <string name="net_other_problems">Probably you don\'t connect to the Net or some other problems :(</string>
</resources>
