<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutEpisode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetailsActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageEpisode"
        android:layout_width="143dp"
        android:layout_height="182dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutEpisode"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tvshowicon"
        android:contentDescription="@string/tvShow_poster" />

    <LinearLayout
        android:id="@+id/linearLayoutEpisode"
        android:layout_width="172dp"
        android:layout_height="199dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvShowNameTextEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="193dp"
            tools:layout_editor_absoluteY="6dp" />

        <TextView
            android:id="@+id/premiereTextEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="44dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEpisode">

        <TextView
            android:id="@+id/textNumberEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/EpisodeNumber"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="275dp" />

        <TextView
            android:id="@+id/textTittleEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/EpisodeTittle"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="238dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showSummaryTextEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="219dp"
            tools:layout_editor_absoluteY="437dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>